fix(results): Align orderby and take controls in query editor (#269)

--- a/src/datasources/results/components/ResultsQueryEditor.scss
+++ b/src/datasources/results/components/ResultsQueryEditor.scss
@@ -1,7 +1,7 @@
-.horizontal-control-group {
+.results-horizontal-control-group {
   display: flex;
 }
 
-.right-query-controls {
+.results-right-query-controls {
   padding-left: 8px;
 }
